@@ -106,10 +106,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-          <release>17</release>
-          <compilerArgs>
-            <arg>--add-modules=jdk.incubator.foreign</arg>
-          </compilerArgs>
+          <release>21</release>
         </configuration>
       </plugin>
       <plugin>
